manifests/utilities/bitwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
spec:
  selector:
    app: bitwarden
  ports:
  - protocol: TCP
    name: http
    port: 80
